Added data/internal and data/outpt to ignore permanently.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+#
 
 # Data to ignore (for now)
 data/
 *.nc
 *.csv
 *.xlsx
+
+# permanent data directories to ignore
+data/internal
+data/output
 
 # virtual environments
 env/
