821 passing tests if you run the make_fake_data module in the test dir prior to running the tests. 68 skipped (failing) tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "gcsfs", # for loading data from google cloud storage with fsspec
     "dask", # for parallelizing data processing and analysis
     "scipy", # for reading and writing NetCDF files among other things
+    "netcdf4", # for reading and writing NetCDF files when scipy is not sufficient
     "zarr", # for reading and writing zarr files directly
     "openpyxl", # for reading excel project organzier files that store metadata
     "pydantic"
